# Advection-reaction

./: CMakeLists.txt  README.md  main_1d3d.cc  main_1d3d_updated.cc  main_burger.cc  main_embedded.cc  main_updated_1d3d.cc
include/: DG_advection_reaction_embedded.h  blood-flow-system-1d3d.h  blood_flow_system_updated_1d3d.h  burger_equation.h  time_dependent_adv_reac_embed.h
latex/: burgers.tex
source/: DG_advection_reaction.cc  DG_advection_reaction_embedded.cc  blood-flow-system-1d3d.cc  blood_flow_system_updated.cc  blood_flow_system_updated_1d3d.cc  burger_equation.cc  burger_with_periodic_bc.cc  time_dependent_adv_reac_embed.cc
tests/: CMakeLists.txt  test_constant.cc  test_constant.output  test_mass_integration.cc  test_mass_integration.output  test_mass_integration_velocity.cc
